--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .button-container {
     display: inline-block; /* This makes the buttons appear next to each other */
+    margin-bottom: 60px;
 }
 
 .button {
@@ -10,12 +11,6 @@
     border: none; /* Remove button border */
     border-radius: 5px; /* Add rounded corners */
 }
-
-.button {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: #fff;
-    text-decoration: none; /* Remove the default underline for anchor elements */
-    border: none;
-    border-radius: 5px;
+h1 {
+    margin-bottom: 60px;
 }
