--- a/style.css
+++ b/style.css
@@ -1,17 +1,81 @@
-.button-container {
+h1 {
+    margin-bottom: 40px;
+}
+
+body {
+    background-color:lavender;
+}
+.header {
+    width: 100%;
+    height: 200px;
+    padding: 10px;
+    margin-bottom: 10px;
+    text-align: left;
+    background-color: cadetblue;
+    color: white;
+    font-size: 30px;
+    position: fixed;
+}
+.button-container1 {
     display: inline-block; /* This makes the buttons appear next to each other */
     margin-bottom: 60px;
 }
-
-.button {
+.button-container2 {
+    margin-bottom: 60px;
+}
+.header-button {
     padding: 10px 20px; /* Adjust the padding as needed */
     margin: 5px; /* Add margin to separate the buttons */
-    background-color: #007bff; /* Button background color */
+    background-color: cadetblue; /* Button background color */
     color: #fff; /* Text color */
     border: none; /* Remove button border */
     border-radius: 5px; /* Add rounded corners */
 }
+.header-button:hover {
+    color: blue;
+}
 
-h1 {
-    margin-bottom: 60px;
+.button-and-map-container  {
+    display: flex;
+    padding-top: 250px;
+}
+
+.map-button {
+    padding: 10px 20px;
+    border-radius: 5px;
+    background-color: lightgray;
+    color: black;
+    font-size: larger;
+}
+.map-button:hover {
+    background-color: gray;
+}
+
+.map {
+    width: 1000px;
+    height: 600px;
+    border: 5;
+    border-radius: 3%;
+    
+}
+
+.vordluselement {
+    display: flex;
+}
+
+/* Style for nuppud1 and nuppud2 */
+.nuppudl, .nuppudr {
+    margin: 10px; /* Adjust margin as needed */
+}
+
+/* Style for buttons */
+.vordlusnuppud {
+    display: block;
+    margin: 5px;
+    padding: 8px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 }
