--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ h1 {
 body {
     background-color:lavender;
 }
-.header {
+header {
     width: 100%;
     height: 200px;
     padding: 10px;
@@ -16,6 +16,34 @@ body {
     font-size: 30px;
     position: fixed;
 }
+
+.header_nupp_ja_tekst {
+    display: flex;
+}
+
+a.kodunupp {
+    display: inline-block;
+    height: 50px;
+    width: 50px;
+    margin-top: 50px;
+    margin-right: 10px;
+    border: 3px;
+    border-radius: 10%;
+    text-decoration: none;
+    color: #fff; /* Text color */
+    background-color: #3498db; /* Button background color */
+    transition: background-color 0.3s ease-in-out;
+  }
+  a.kodunupp i {
+    position: fixed;
+    margin-top: 10px;
+    margin-left: 8px;
+
+  }
+  /* Hover effect */
+  a.kodunupp:hover {
+    background-color: #2980b9; /* Change button background color on hover */
+  }
 .button-container1 {
     display: inline-block; /* This makes the buttons appear next to each other */
     margin-bottom: 60px;
@@ -25,11 +53,13 @@ body {
 }
 .header-button {
     padding: 10px 20px; /* Adjust the padding as needed */
+    text-decoration: none;
     margin: 5px; /* Add margin to separate the buttons */
     background-color: cadetblue; /* Button background color */
     color: #fff; /* Text color */
     border: none; /* Remove button border */
     border-radius: 5px; /* Add rounded corners */
+    transition: color 0.3s ease-in-out;
 }
 .header-button:hover {
     color: blue;
@@ -46,6 +76,7 @@ body {
     background-color: lightgray;
     color: black;
     font-size: larger;
+    transition: background-color 0.3s ease-in-out;
 }
 .map-button:hover {
     background-color: gray;
@@ -78,5 +109,10 @@ body {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
+}   
+
+.vordlusnuppud:hover {
+    background-color: #39873c;
 }
 
