--- a/tu_uhikad.css
+++ b/tu_uhikad.css
@@ -6,7 +6,7 @@ h1 {
 }
 body {
     align-items: center;
-    background-color: blanchedalmond;
+    background-color: lavender;
 }
 img {
     width: 200px; 
