--- a/Muudühikad.css
+++ b/Muudühikad.css
@@ -4,12 +4,12 @@
     box-sizing: border-box;
 }
 
-h1 {
+/* h1 {
     font-size: 28px;
     color: #333;
     margin-bottom: 20px;
     text-align: center;
-}
+} */
 
 body {
     font-family: 'Roboto', sans-serif;
