--- a/Main_style.css
+++ b/Main_style.css
@@ -1,8 +1,9 @@
-.kontent {
-    padding-top: 250px;
-}
 body {
     background-color:lavender;
+}
+h1 {
+    text-align: center;
+    font-weight: bold;
 }
 header {
     width: 100%;
