--- a/Avaleht.css
+++ b/Avaleht.css
@@ -1,10 +1,22 @@
-.button-and-map-container  {
+.mapi-hoidik  {
     display: flex;
+    flex-direction: row;
+    width: auto;
+    height: auto;
 }
-.mapi-nuppudude-hoidik {
-    margin-bottom: 60px;
+.siin-on-map {
+    width: 69%;
+    border-radius: 10px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    margin-right: 5px
 }
-.map-button {
+.map {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1)
+}
+.mapi-nupp {
     padding: 10px 20px;
     border-radius: 5px;
     background-color: lightgray;
@@ -12,63 +24,84 @@
     font-size: larger;
     transition: background-color 0.3s ease-in-out
 }
-.map-button:hover {
+.mapi-nupp:hover {
     background-color: gray;    
     cursor: pointer;
 }
-.map {
-    width: 1000px;
-    height: 100%;
-    box-shadow:cadetblue;
-    border-radius: 3%;
+
+
+
+.vordluselendi-hoidik {
+    display: flex;
+    flex-direction: row;
+    width: auto;
+    height: auto;
+    
 }
-.vordluselement {
+.hinnavõrdlus {
+    padding-top: 10px;
+    width: 69%;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    margin-top: 50px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1)
 }
 .vordluselemendi-pohisisu {
     width: 75%;
     height:auto;
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
 }
 .vorreldavl, .vorreldavr {
     width: 50%;
     display: flex;
     justify-content: space-evenly;
-    
 }
 .nuppudl, .nuppudr {
     display: flex;
     flex-direction: column;
-    width: 200px;
-    height: 200px;
-    overflow-y: scroll; 
+    width: 250px;
+    height: 250px;
+    overflow-y: scroll;
+    margin-bottom: 10px; 
+    border-radius: 5px;
+    margin-left: 5px;
+    margin-right: 5px
 }
-.vordlusnuppud {
+.vordlusnupp {
     padding: 10px 20px;
-    border: 2px solid black;
     border-radius: 5px;
     background-color: lightgray;
     color: black;
     font-size: larger;
     transition: background-color 0.3s ease-in-out
 }   
-.vordlusnuppud:hover {
+.vordlusnupp:hover {
     background-color: gray;
     cursor: pointer;
 }
 .teksti-hoidik {
     width: 200px;
     height: 200px;
-    border: 3px solid black;
-    border-radius: 5px;
-    background-color: rgb(151, 205, 207);
+    border-radius: 10px;
+    border: 2px solid #333;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    background-color:lightgray;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center
+}
+.koolum {
+    display: flex;
+    flex-direction: column;
+
+}
+.space-evenly {
+    display: flex;
+    justify-content: space-evenly;
 }
